# smart-home-zigbee

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: ac-control.md  device-discovery.md  fresh-air-control.md  heat-control.md  light-control.md  protocol.md  scene-control.md
examples/: basic_control.py  bemfa_bridge.py
smart_home_zigbee/: __init__.py  ac.py  cli.py  config.py  fresh_air.py  gateway.py  heat.py  light.py  protocol.py  scene.py
